<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:background="@drawable/main_header_selector">

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:padding="12dp"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/product_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@id/image_product"
        app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:paddingTop="12dp"
        android:textColor="@color/product_name"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:maxLines="2"
        android:textSize="18sp"
        android:maxHeight="50dp"
        android:fontFamily="@font/open_sans_extra_bold"
        android:text="@string/Product_name_placeholder"
        app:layout_constraintStart_toStartOf="@id/inner_container"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:maxHeight="150dp"
        android:textColor="@color/product_description"
        android:text="@string/product_description"
        app:layout_constraintStart_toStartOf="@id/product_name"
        app:layout_constraintTop_toBottomOf="@id/product_name"/>

    <TextView
        android:id="@+id/price_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textColor="@color/first_price"
        android:text="@string/price_placeholder"
        app:layout_constraintStart_toStartOf="@id/product_name"
        app:layout_constraintTop_toBottomOf="@id/product_description"/>

    <TextView
        android:id="@+id/price_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:textSize="11sp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textColor="@color/second_price"
        android:text="@string/price_placeholder"
        app:layout_constraintStart_toEndOf="@id/price_first"
        app:layout_constraintTop_toBottomOf="@id/product_description"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/item_in_favorite"
        app:layout_constraintTop_toBottomOf="@id/price_first"
        app:layout_constraintStart_toStartOf="@id/product_name"
        app:constraint_referenced_ids="not_in_favorite_icon"/>

    <ImageView
        android:id="@+id/not_in_favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_heart"
        android:scaleType="matrix"
        android:layout_margin="12dp"
        android:contentDescription="@string/item_in_favorite"
        app:layout_constraintTop_toTopOf="@id/group"
        app:layout_constraintStart_toStartOf="@id/group"/>

    <ImageView
        android:id="@+id/in_favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_red_filled_heart_icon"
        android:scaleType="matrix"
        android:layout_margin="12dp"
        android:visibility="gone"
        android:contentDescription="@string/item_not_in_favorites"
        app:layout_constraintTop_toTopOf="@id/group"
        app:layout_constraintStart_toStartOf="@id/group"/>

    <ImageView
        android:id="@+id/shop_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shopping_cart"
        android:paddingHorizontal="46dp"
        android:layout_margin="12dp"
        android:scaleType="matrix"
        android:contentDescription="@string/shopping_cart"
        app:layout_constraintStart_toEndOf="@id/group"
        app:layout_constraintTop_toBottomOf="@id/price_first"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
